--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p class="text-muted">
             A final-year Bachelor of Engineering student at MVSR Engineering College, Hyderabad with a CGPA of 9.72. I am passionate about software development, with hands-on experience as a backend developer in two internships and as a front-end developer in one. I have a solid foundation in web development and machine learning through various certifications and project work. My approach emphasizes both technical proficiency and a commitment to creating efficient, user-centered applications.
           </p>
-          <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
+          <button src="contact" class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
             Hire Me
           </button>
           <a href="" class="link ms-4 d-none">See My Work</a>
